All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Fixed
- [MONITOR] Avoid wrong node state during monitoring operations
- [API_PARSER] [WAF_CLOUDFLARE] Work with dynamic fields on query
### Changed
- [API_PARSER] [CYBEREASON] Refacto code and avoid API errors by getting bulks of 1000 logs


## [2.17.1] - 2024-12-05
### Fixed
- [WORKFLOW] [MODELS] Revert deleted imports


## [2.17.0] - 2024-11-25
### Added
- [API_PARSER] [CORTEX_XDR] Add advanced token feature
### Changed
- [API_PARSER] [CORTEX_XDR] Improve logging and code quality
- [API_PARSER] [CISCO_UMBRELLA] Add the list of users in logs
### Fixed
- [API_PARSER] [CISCO_UMBRELLA] Correctly store and refresh the active Oauth2 token


## [2.16.2] - 2024-11-13
### Fixed
- [NETWORK] Set dynamic resolution for interfaces specified in NATs


## [2.16.1] - 2024-11-08
### Fixed
- [NETWORK] Don't use link-local IPv6 addresses when NATing on IPv6-enabled interfaces


## [2.16.0] - 2024-11-04
### Added
- [LOG_FORWARDER] [REDIS] Support for queues, sets, publish and streams modes for log insertion
- [LOGOMELASTICSEARCH] Handle log insertion errors returned by elasticsearch
- [LOGOM] Add the ability to define the spooling directory for DA queues
- [TENANTS] New additional_config field
- [NETWORK] Automatically select the best interface for outgoing Backend/LogForwarders using system routes
- [API_PARSER] [CISCO_MERAKI] Add support for security logs
### Changed
- [DEPENDENCIES] Upgrade djongo and code for pymongo>=4
- [FRONTEND] [GUI] Improve binding information for Filebeat, Redis and Kafka listeners
- [CRON] Update Reputation Context DBs at 6:00am instead of 2:00am
- [LOGOM] Increment checkpoint interval for DA queues, to increase performances
- [LOGOM] Code and logic factorization