@@ -1,0 +1,31 @@
+# Generated by Django 4.2.11 on 2024-12-10 10:46
+
+from django.db import migrations
+from toolkit.mongodb.mongo_base import MongoBase
+
+def remove_server_target_port_unicity_constraint2():
+    m = MongoBase()
+    m.connect_primary()
+    # If the node is not yet installed, no need to drop collections
+    if m.db and m.db['vulture'] is not None:
+        coll = m.db['vulture']['applications_server']
+        if coll is not None:
+            for index in coll.list_indexes():
+                # filter on unicity indexes
+                if index.get("unique", False):
+                    keys = list(index.get('key', {}).keys())
+                    # filter on unicity indexes concerning 'target' and 'port' fields
+                    if "target" in keys and "port" in keys:
+                        print(f"Removing index {index.get('name')} in column 'applications_server'")
+                        coll.drop_index(index['name'])
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('applications', '0024_factorize_logom_enabled'),
+    ]
+
+    operations = [
+        migrations.RunPython(remove_server_target_port_unicity_constraint2, migrations.RunPython.noop),
+    ]
